force-app/main/default/objects/Special_Needs__c/Special_Needs__c.object-meta.xml
<CustomObject>
    <label>Dietary &amp; Special Needs</label>
    <nameField>
        <displayFormat>SN - {0000}</displayFormat>
        <label>Special Needs Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dietary &amp; Special Needs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>