force-app/main/default/objects/Special_Needs__c/fields/Anaphylatic__c.field-meta.xml
<CustomField>
    <fullName>Anaphylatic__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked they are anaphylactic to the specific allergy</inlineHelpText>
    <label>Anaphylactic?</label>
    <type>Checkbox</type>
</CustomField>