force-app/main/default/objects/Special_Needs__c/fields/ATTRIBUTESID__c.field-meta.xml
<CustomField>
    <fullName>ATTRIBUTESID__c</fullName>
    <externalId>true</externalId>
    <label>ATTRIBUTESID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>