force-app/main/default/objects/Special_Needs__c/fields/AttributeType__c.field-meta.xml
<CustomField>
    <fullName>AttributeType__c</fullName>
    <label>Attribute Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DietryNeeds</fullName>
                <label>Dietary Needs</label>
            </value>
            <value>
                <fullName>SpecialNeeds</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>