force-app/main/default/objects/Special_Needs__c/fields/Legacy_Comments_To_Be_Purged_June_2017__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Comments_To_Be_Purged_June_2017__c</fullName>
    <label>Legacy Comments To Be Purged June 2017</label>
    <type>TextArea</type>
</CustomField>