force-app/main/default/objects/Special_Needs__c/fields/Long_Description__c.field-meta.xml
<CustomField>
    <fullName>Long_Description__c</fullName>
    <label>Long Description</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADD</fullName>
            </value>
            <value>
                <fullName>ADHD</fullName>
            </value>
            <value>
                <fullName>Allergic - All Nuts</fullName>
            </value>
            <value>
                <fullName>Allergic - Buckwheat</fullName>
            </value>
            <value>
                <fullName>Allergic - Eggs</fullName>
            </value>
            <value>
                <fullName>Allergic - Fish</fullName>
            </value>
            <value>
                <fullName>Allergic - Garlic</fullName>
            </value>
            <value>
                <fullName>Allergic - Kiwi Fruit</fullName>
            </value>
            <value>
                <fullName>Allergic - Mushrooms</fullName>
            </value>
            <value>
                <fullName>Allergic - Oranges</fullName>
            </value>
            <value>
                <fullName>Allergic - Other</fullName>
            </value>
            <value>
                <fullName>Allergic - Parmesan Cheese</fullName>
            </value>
            <value>
                <fullName>Allergic - Peanuts</fullName>
            </value>
            <value>
                <fullName>Allergic - Pork</fullName>
            </value>
            <value>
                <fullName>Allergic - Prawns</fullName>
            </value>
            <value>
                <fullName>Allergic - Seafood</fullName>
            </value>
            <value>
                <fullName>Allergic - Sesame</fullName>
            </value>
            <value>
                <fullName>Allergic - Shellfish</fullName>
            </value>
            <value>
                <fullName>Allergic - Tomatoes</fullName>
            </value>
            <value>
                <fullName>Allergic - Yeast</fullName>
            </value>
            <value>
                <fullName>Allergic to dust mites</fullName>
            </value>
            <value>
                <fullName>Allergy - Angel Cream</fullName>
            </value>
            <value>
                <fullName>Allergy - Antibiotic Erythromycin</fullName>
            </value>
            <value>
                <fullName>Allergy - Asparaginase</fullName>
            </value>
            <value>
                <fullName>Allergy - Asprin</fullName>
            </value>
            <value>
                <fullName>Allergy - Bactrim</fullName>
            </value>
            <value>
                <fullName>Allergy - Band Aids</fullName>
            </value>
            <value>
                <fullName>Allergy - Bee Stings</fullName>
            </value>
            <value>
                <fullName>Allergy - Bleomycin</fullName>
            </value>
            <value>
                <fullName>Allergy - Brietal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>