force-app/main/default/objects/Special_Needs__c/fields/Special_Needs_Id__c.field-meta.xml
<CustomField>
    <fullName>Special_Needs_Id__c</fullName>
    <externalId>true</externalId>
    <label>Special Needs Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>