force-app/main/default/objects/Special_Needs__c/recordTypes/Dietary_Requirement.recordType-meta.xml
<RecordType>
    <fullName>Dietary_Requirement</fullName>
    <active>true</active>
    <label>Dietary Requirement</label>
</RecordType>