force-app/main/default/objects/Special_Needs__c/recordTypes/Health_Needs.recordType-meta.xml
<RecordType>
    <fullName>Health_Needs</fullName>
    <active>true</active>
    <description>All other health needs</description>
    <label>Health Needs</label>
</RecordType>