force-app/main/default/objects/Special_Needs__c/recordTypes/Special_Need.recordType-meta.xml
<RecordType>
    <fullName>Special_Need</fullName>
    <active>true</active>
    <description>Non-food related allergies</description>
    <label>Special Need</label>
</RecordType>