force-app/main/default/objects/Special_Needs__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>AttributeType__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>ATTRIBUTESID__c</columns>
    <columns>Comments__c</columns>
    <columns>Date__c</columns>
    <columns>Long_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>