force-app/main/default/objects/Special_Needs__c/listViews/X2_Dietary_Requirement.listView-meta.xml
<ListView>
    <fullName>X2_Dietary_Requirement</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>AttributeType__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>ATTRIBUTESID__c</columns>
    <columns>Comments__c</columns>
    <columns>Date__c</columns>
    <columns>Long_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>2. Dietary Requirement</label>
</ListView>